# compress

./: .gitignore  README.md  command.txt  compress.py  pyproject.toml  requirements.txt
compress/: __init__.py  __main__.py  compress.py  utils.py
