[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compress"
version = "0.1.0"
dependencies = [
    "rich==13.9.4",
    "docopt==0.6.2"
]
description = "Mass video compressor"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Desperationis/compress"
Issues = "https://github.com/Desperationis/compress/issues"

[project.scripts]
compress = "compress:main"
